# convex-hull

./: .gitignore  CMakeLists.txt  LICENSE  README.md  help.h  main.cpp
